fix: Put Smtp debug details in Debug struct
