# core/src/smtp/yahoo/api.rs
@@ -16,7 +16,7 @@
 
 use super::YahooError;
 use crate::{
-	smtp::{http_api::create_client, SmtpDetails, VerifMethod},
+	smtp::{http_api::create_client, SmtpDetails},
 	util::{constants::LOG_TARGET, input_output::CheckEmailInput},
 };
 use regex::Regex;
@@ -168,7 +168,6 @@ pub async fn check_api(to_email: &str, input: &CheckEmailInput) -> Result<SmtpDe
 	Ok(SmtpDetails {
 		can_connect_smtp: true,
 		is_deliverable: username_exists,
-		verif_method: VerifMethod::Api,
 		..Default::default()
 	})
 }
